# raytracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  render.ppm
scenes/: SheresIncludedInBox.cfg  boxIncludeSpheres.cfg  boxWithDoubleSpheres.cfg  boxWithSphere.cfg  config-unlimited.cfg  config.cfg  config2.cfg  config3.cfg  multipleChromedSphereOnChessBoard.cfg  multipleChromedSphereOnChromedChessBoard-rotateXY35.cfg  multipleChromedSphereOnChromedChessBoard.cfg  multiplePlasticSphereAndColoredLights.cfg
scenes/could/: LimitedConeCylinder.cfg  ObjFile.cfg  SpheresIncludedInBox.cfg  boxIncludeSpheres.cfg  chessboard.cfg  multipleColoredLights.cfg  phong.cfg  reflectionRefraction.cfg
scenes/must/: multipleSphereOnPlane.cfg  multipleSphereOnPlaneWithLessLight.cfg  sphereOnPlane.cfg
scenes/should/: multipleSphereOnMultiplePlanes.cfg  multipleSphereOnMultiplePlanesRotation.cfg  unlimitedConeRotation.cfg  unlimitedCylinderRotation.cfg
screenshot/: boxWithDoubleSpheres.ppm  boxWithSphere.ppm
src/: Camera.cpp  Camera.hpp  MathUtils.cpp  MathUtils.hpp  Plane.cpp  Plane.hpp  Point3D.cpp  Point3D.hpp  Ray.cpp  Ray.hpp  Rectangle3D.cpp  Rectangle3D.hpp  Sphere.cpp  Sphere.hpp  Spot.cpp  Spot.hpp  Vector3D.cpp  Vector3D.hpp  main.cpp
src/cameras/: Camera.cpp  Camera.hpp  ICamera.hpp
src/lights/: ALight.hpp  Ambient.cpp  Ambient.hpp  ILight.hpp  Spot.cpp  Spot.hpp
src/materials/: AMaterial.cpp  AMaterial.hpp  Chrome.cpp  Chrome.hpp  ChromeEntryPoint.cpp  Emerald.hpp  EmeraldEntryPoint.cpp  IMaterial.hpp  Plastic.cpp  Plastic.hpp  PlasticEntryPoint.cpp
src/maths/: Ray.hpp  Utils.cpp  Utils.hpp  Vector3D.cpp  Vector3D.hpp
src/objects/: ABuilder.hpp  AObject.hpp  Cone.cpp  Cone.hpp  ConeBuilder.hpp  ConeData.hpp  ConeEntryPoint.cpp  Cylinder.cpp  Cylinder.hpp  CylinderBuilder.hpp  CylinderData.hpp  CylinderEntryPoint.cpp  IBuilder.hpp  IObject.hpp  PipeLine.hpp  Plane.cpp  Plane.hpp  PlaneBuilder.hpp  PlaneData.hpp  PlaneEntryPoint.cpp  Sphere.cpp  Sphere.hpp  SphereBuilder.hpp  SphereData.hpp  SphereEntryPoint.cpp  Triangle.cpp  Triangle.hpp  TriangleBuilder.hpp  TriangleData.hpp  TriangleEntryPoint.cpp  UnlimitedCone.cpp  UnlimitedCone.hpp  UnlimitedConeBuilder.hpp  UnlimitedConeData.hpp  UnlimitedConeEntryPoint.cpp  UnlimitedCylinder.cpp  UnlimitedCylinder.hpp  UnlimitedCylinderBuilder.hpp  UnlimitedCylinderData.hpp  UnlimitedCylinderEntryPoint.cpp
src/renderer/: ARenderer.hpp  GraphicalRenderer.cpp  GraphicalRenderer.hpp  IDisplayModule.hpp  IRenderer.hpp  PPMRenderer.cpp  PPMRenderer.hpp  SFMLDisplayModule.hpp
src/scenes/: IScene.hpp  Scene.cpp  Scene.hpp
src/texture/: ATexture.cpp  ATexture.hpp  ATextureBuilder.hpp  ChessBoard.cpp  ChessBoard.hpp  ChessBoardBuilder.hpp  ChessBoardEntryPoint.cpp  ITexture.hpp  ITextureBuilder.hpp  SoloBuilder.hpp  SoloEntryPoint.cpp
src/utils/: Error.hpp
src/utils/ObjFile/: IObjFile.hpp  ObjFile.hpp
src/utils/builder/: ABuilder.hpp  IBuilder.hpp
src/utils/config/: Config.hpp  ConfigManager.cpp  ConfigManager.hpp
src/utils/config/data/: AData.hpp  IData.hpp
src/utils/data/: IData.hpp
src/utils/factory/: IObjectFactory.hpp  ObjectFactory.cpp  ObjectFactory.hpp
src/utils/loader/: ILoader.hpp  IPluginsManager.hpp  LibraryLoader.cpp  LibraryLoader.hpp  Loader.hpp  PluginsManager.hpp
src/utils/string/: StringUtils.hpp
